chore: add articles management route and improve user menu

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -48,10 +48,12 @@
     "login": "Login",
     "logout": "Logout",
     "writeArticle": "Write an article",
+    "articlesManagement": "Manage articles",
     "team": "Teams",
     "accountConfig": "Account management",
     "myAccount": "My account",
-    "settings": "My settings"
+    "settings": "My settings",
+    "bopAccount": "BecauseOfProg account"
   },
   "loginDialog": {
     "login": "Login",
