feat: show on the card when an article was read

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -83,7 +83,11 @@
     "category": "Category - {category}",
     "type": "Type - {type}"
   },
+  "devblog": {
+    "title": "BecauseOfProg's DevBlog"
+  },
   "article": {
+    "wasRead": "You saw this article.",
     "shareArticle": "Share the article",
     "published": "Published in ",
     "publishedBy": "Published by",
