feat: add article creation (for staff)

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -100,7 +100,10 @@
     "title": "Social Networks and links"
   },
   "createArticle": {
-    "title": "Create an article"
+    "title": "Create an article",
+    "publish": "Publish article",
+    "success": "Your article was successfully published!",
+    "error": "An error occurred in the upload of your article."
   },
   "account": {
     "title": "My BecauseOfProg account"
