Fix: footer, mobile menu, i18n, icons, keys

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -32,6 +32,7 @@
     "searchField": "Rechercher des publications..."
   },
   "mobileMenu": {
+    "home": "Accueil",
     "social": "Social",
     "articles": "Articles",
     "search": "Recherche",
