--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -31,6 +31,7 @@
     "searchField": "Search for posts..."
   },
   "mobileMenu": {
+    "home": "Home",
     "social": "Social",
     "articles": "Articles",
     "search": "Search",
